# shrinkit

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  shrinkit.py
.github/workflows/: ci.yml
src/shrinkit/: __init__.py  __main__.py  cli.py  commands.py  utils.py
test/: test_cli.py  test_commands.py  test_image.py  test_utils.py
tests/: test_cli.py  test_commands.py  test_image.py  test_utils.py
